Added a weakness evaluation system and reverted the async ai calls. The question giver is changed so that the agent gives N number of questions at a time instead of 1 question at a time N times

--- a/backend/stacktrek/src/main/resources/application.properties
+++ b/backend/stacktrek/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=stacktrek
 server.port=1010
 logging.level.org.mongodb.driver=warn
+server.max-http-request-header-size=65536
+server.tomcat.max-http-response-header-size=65536
 
 spring.data.mongodb.database=${env.MONGO_DB}
 spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}
